adjust width of bookmarks button to avoid line wrapping on large screens

--- a/app/assets/stylesheets/franklin.css.scss
+++ b/app/assets/stylesheets/franklin.css.scss
@@ -478,13 +478,6 @@ body header #search-navbar div.container {
     position: static!important;
 }
 
-
-
-
-
-
-
-/*  END NEW HEADER 165-464 */
 #li-bookmarks {
   float: left;
   width: 16rem;
@@ -506,7 +499,7 @@ body header #search-navbar div.container {
     }
     @media (min-width: 822px) {
       padding: 2.1rem 0 0 3rem;
-      width: 15rem;
+      width: 14rem;
     }
   }
 }
